--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,15 @@
 /* default text and colours */
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 :root {
-  --font-base: "DM Sans", sans-serif;
+  --font-base: "Poppins";
 
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
-  --black-color: #030303;
-  --lightGray-color: #e4e4e4;
-  --gray-color: #6b7688;
-  --brown-color: #46364a;
+  --secondary-color: #f39cc3;
+  --black-color: #0940cd;
+  --lightGray-color: #fac900;
+  --gray-color: #fe5f00;
+  --brown-color: #f30032;
   --white-color: #ffffff;
 }
 
@@ -19,3 +19,10 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+
+/* Dark Blue #0940cd
+Light Blue #69ccf8
+Pink #f39cc3
+Red #f30032
+Orange #fe5f00
+Yellow #fac900 */
