--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
     align-items: center;
   
     padding: 1rem 2rem;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgb(255, 255, 255);
     // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -21,15 +21,18 @@
     align-items: center;
   
     img {
-      width: 90px;
-      height: 20px;
+      width: 450px;
+      height: 38px;
   
       @media screen and (min-width: 2000px) {
-        width: 180px;
-        height: 40px;
+        width: 450px;
+        height: 38px;
       }
     }
   }
+
+  // 1800 × 150
+  // 450 x 38
   
   .app__navbar-links {
     flex: 1;
