--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
 
   --primary-color: #edf2f8;
   --secondary-color: #f39cc3;
-  --black-color: #0940cd;
+  --black-color: #000000;
   --lightGray-color: #fac900;
   --gray-color: #fe5f00;
   --brown-color: #f30032;
