--- a/frontend/src/containers/Header/Header.scss
+++ b/frontend/src/containers/Header/Header.scss
@@ -1,6 +1,7 @@
 #home {
     position: relative;
-    background: url("../../assets/bgIMG.png");
+    // background: url("../../assets/bgIMG.png");
+    background-color: #0940cd;
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
@@ -13,6 +14,18 @@
         display: none;
       }
     }
+  }
+
+  .intro h1 {
+    font-size: 10rem;
+  }
+
+  .intro h2 {
+    font-size: 4rem;
+  }
+
+  .statements p {
+    font-size: 6rem;
   }
   
   .app__header {
@@ -52,48 +65,48 @@
     }
   }
   
-  .app__header-badge {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    flex-direction: column;
+  // .app__header-badge {
+  //   width: 100%;
+  //   display: flex;
+  //   justify-content: flex-end;
+  //   align-items: flex-end;
+  //   flex-direction: column;
   
-    .badge-cmp,
-    .tag-cmp {
-      padding: 1rem 2rem;
-      background: var(--white-color);
-      border-radius: 15px;
-      flex-direction: row;
-      width: auto;
+  //   .badge-cmp,
+  //   .tag-cmp {
+  //     padding: 1rem 2rem;
+  //     background: var(--white-color);
+  //     border-radius: 15px;
+  //     flex-direction: row;
+  //     width: auto;
   
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    }
+  //     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  //   }
   
-    .tag-cmp {
-      flex-direction: column;
-      margin-top: 3rem;
+  //   .tag-cmp {
+  //     flex-direction: column;
+  //     margin-top: 3rem;
   
-      p {
-        width: 100%;
-        text-transform: uppercase;
-        text-align: right;
-      }
-    }
+  //     p {
+  //       width: 100%;
+  //       text-transform: uppercase;
+  //       text-align: right;
+  //     }
+  //   }
   
-    span {
-      font-size: 2.5rem;
+  //   span {
+  //     font-size: 2.5rem;
   
-      @media screen and (min-width: 2000px) {
-        font-size: 5rem;
-      }
-    }
+  //     @media screen and (min-width: 2000px) {
+  //       font-size: 5rem;
+  //     }
+  //   }
   
-    @media screen and (max-width: 1200px) {
-      justify-content: flex-start;
-      align-items: flex-start;
-    }
-  }
+  //   @media screen and (max-width: 1200px) {
+  //     justify-content: flex-start;
+  //     align-items: flex-start;
+  //   }
+  // }
   
   .app__header-circles {
     flex: 0.75;
